--- a/oldmaterials.html
+++ b/oldmaterials.html
@@ -48,7 +48,7 @@
             <li><a href="expense.html">Employee Expenses</a></li>
             <li><a href="accessories.html">Accessories</a></li>
             <li><a href="summary.html" >Summary</a></li>
-            <li><a href="login.html">Sign Out</a></li>
+            <li><a href="index.html">Sign Out</a></li>
 
           </ul>  
         </nav>
@@ -78,19 +78,19 @@
           </header>
           <form action="index.html" class="templatemo-login-form">
             <div class="form-group">
-              <span style="color: green;font-size: 15px;">Customer Name : </span> 
-              <div class="input-group">  
-                    <div class="input-group-addon"></div>      
-                    <input type="text" class="form-control" placeholder="name">           
-                </div>  
-            </div>
-
-            <div class="form-group">
               <span style="color: green;font-size: 15px;">Aadhar Number : </span> 
               <div class="input-group">  
                              
                     <div class="input-group-addon"></div> 
                     <input type="text" class="form-control" placeholder="Aadhar">           
+                </div>  
+            </div>
+          <form action="index.html" class="templatemo-login-form">
+            <div class="form-group">
+              <span style="color: green;font-size: 15px;">Customer Name : </span> 
+              <div class="input-group">  
+                    <div class="input-group-addon"></div>      
+                    <input type="text" class="form-control" placeholder="name">           
                 </div>  
             </div>
 
