--- a/salary.html
+++ b/salary.html
@@ -48,7 +48,7 @@
             <li><a href="expense.html"class="active">Employee Expenses</a></li>
             <li><a href="accessories.html">Accessories</a></li>
             <li><a href="summary.html" >Summary</a></li>
-            <li><a href="login.html">Sign Out</a></li>
+            <li><a href="index.html">Sign Out</a></li>
           </ul>  
         </nav>
       </div>
