--- a/summary.html
+++ b/summary.html
@@ -49,7 +49,7 @@
             <li><a href="expense.html" >Employee Expenses</a></li>
             <li><a href="accessories.html">Accessories</a></li>
             <li><a href="summary.html" class="active">Summary</a></li>
-            <li><a href="login.html">Sign Out</a></li>
+            <li><a href="index.html">Sign Out</a></li>
           </ul>  
         </nav>
       </div>
