--- a/accessories1.html
+++ b/accessories1.html
@@ -42,7 +42,8 @@
         </div>
         <nav class="templatemo-left-nav">          
           <ul>
-     <li><a href="article.html" >Article Finance</a></li>
+    <li><a href="customer1.html">Customer</a></li>
+            <li><a href="article.html">Article Finance</a></li>
             <li><a href="interest.html">Cash Finance</a></li>
             <li><a href="oldmaterials.html">Buy Back Items</a></li>
             <li><a href="expense.html" >Employee Expenses</a></li>
@@ -58,7 +59,7 @@
           <div class="row">
             <nav class="templatemo-top-nav col-lg-12 col-md-12">
               <ul class="text-uppercase">
-                <li><a href="accessories.html" >Customer</a></li>
+                
                 <li><a href="accessories1.html" class="active">Accessories</a></li>
               </ul>  
             </nav> 
