--- a/oldmaterials.html
+++ b/oldmaterials.html
@@ -32,7 +32,7 @@
           <div class="square"></div>
           <h2 style="color: #FFDF00" >Maha Lakshmi Finance</h2>
         </header>
-        <div class="profile-photo-container" >
+        <div class="profile-photo-container" align="center" >
           <img src="images/logo.png" alt="Profile Photo"  class="templatemo-site-header pic">  
           
         </div>   
